--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ input[type="radio"] {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 input[type="radio"]:checked {
